--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<H1 class="heading">This is a Heading</H1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
