--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="main">
-		<heading class="heading">This is a Heading</heading>
+		<h1 class="heading" id="heading" >This is a Heading</heading>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
